supprt keyboad on SE

--- a/FictiveKin/FictiveKin/Info.plist
+++ b/FictiveKin/FictiveKin/Info.plist
@@ -51,6 +51,8 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Save selected image to Photos</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
